@@ -31,7 +31,6 @@ import org.springframework.stereotype.Service;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 public class ScopeMappingRepository {
@@ -79,7 +78,7 @@ public class ScopeMappingRepository {
 
         List<RoleRepresentation> realmRoles = roles.stream()
                 .map(role -> roleRepository.getRealmRole(realmName, role))
-                .collect(Collectors.toList());
+                .toList();
 
         scopeMappingsResource.realmLevel().remove(realmRoles);
     }
