@@ -36,7 +36,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class ScopeMappingImportService {
@@ -162,7 +161,7 @@ public class ScopeMappingImportService {
 
         List<String> rolesToBeRemoved = existingScopeMappingRoles.stream()
                 .filter(role -> !scopeMappingRolesToImport.contains(role))
-                .collect(Collectors.toList());
+                .toList();
 
         String client = existingScopeMapping.getClient();
         String clientScope = existingScopeMapping.getClientScope();
@@ -178,7 +177,7 @@ public class ScopeMappingImportService {
 
         List<String> rolesToBeAdded = scopeMappingRolesToImport.stream()
                 .filter(role -> !existingScopeMappingRoles.contains(role))
-                .collect(Collectors.toList());
+                .toList();
 
         addRolesToScopeMappingIfNecessary(realmName, client, clientScope, rolesToBeAdded);
     }
