@@ -82,7 +82,7 @@ public class ClientCompositeImport {
 
         return existingClientComposites.stream()
                 .map(RoleRepresentation::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void removeRealmRoleClientComposites(
